@@ -52,6 +52,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|HashMap
 import|;
 end_import
@@ -632,15 +642,35 @@ name|closed
 operator|=
 literal|true
 expr_stmt|;
+name|Collection
+argument_list|<
+name|CacheValue
+argument_list|>
+name|values
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|CacheValue
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|values
+operator|.
+name|addAll
+argument_list|(
+name|byDirectoryCache
+operator|.
+name|values
+argument_list|()
+argument_list|)
+expr_stmt|;
 for|for
 control|(
 name|CacheValue
 name|val
 range|:
-name|byDirectoryCache
-operator|.
 name|values
-argument_list|()
 control|)
 block|{
 try|try
@@ -683,6 +713,54 @@ expr_stmt|;
 break|break;
 block|}
 block|}
+assert|assert
+name|val
+operator|.
+name|refCnt
+operator|==
+literal|0
+operator|:
+name|val
+operator|.
+name|refCnt
+assert|;
+block|}
+catch|catch
+parameter_list|(
+name|Throwable
+name|t
+parameter_list|)
+block|{
+name|SolrException
+operator|.
+name|log
+argument_list|(
+name|log
+argument_list|,
+literal|"Error closing directory"
+argument_list|,
+name|t
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|values
+operator|=
+name|byDirectoryCache
+operator|.
+name|values
+argument_list|()
+expr_stmt|;
+for|for
+control|(
+name|CacheValue
+name|val
+range|:
+name|values
+control|)
+block|{
+try|try
+block|{
 assert|assert
 name|val
 operator|.
