@@ -392,6 +392,48 @@ name|join
 argument_list|()
 expr_stmt|;
 block|}
+name|Thread
+name|thread
+init|=
+operator|new
+name|Thread
+argument_list|()
+block|{
+specifier|public
+name|void
+name|run
+parameter_list|()
+block|{
+try|try
+block|{
+name|df
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+name|e
+argument_list|)
+throw|;
+block|}
+block|}
+block|}
+decl_stmt|;
+name|thread
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
 comment|// do any remaining releases
 synchronized|synchronized
 init|(
@@ -535,9 +577,9 @@ block|}
 block|}
 block|}
 block|}
-name|df
+name|thread
 operator|.
-name|close
+name|join
 argument_list|()
 expr_stmt|;
 block|}
